--- a/src/index.css
+++ b/src/index.css
@@ -8,5 +8,5 @@
 /* Fuente y color base */
 body {
   font-family: Arial, sans-serif;
-  background-color: #ffffff; /* opcional, puedes cambiarlo según tu diseño */
+  background-color: #ffffff; 
 }
