--- a/src/views/homePage/Style/bootCampCard.css
+++ b/src/views/homePage/Style/bootCampCard.css
@@ -31,10 +31,13 @@
 }
 
 /* Chips de tecnologías */
+
 .techs {
   display: flex;
   flex-wrap: wrap;
   gap: 10px;
+  justify-content: center; 
+  margin-top: 15px;       
 }
 
 .techs span {
@@ -46,6 +49,7 @@
   font-weight: bold;
   box-shadow: 0 2px 6px rgba(0,0,0,0.2);
 }
+
 
 /* Botón dentro de card*/
 .bootcamp-card button {
